# chocolate-quakeworld

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: continuous_integration.yml
src/client/: CMakeLists.txt  adivtab.h  anorms.h  bgmusic.c  cl_cam.c  cl_demo.c  cl_ents.c  cl_input.c  cl_main.c  cl_parse.c  cl_pred.c  cl_tent.c  console.c  d_edge.c  d_fill.c  d_ifacea.h  d_init.c  d_local.h  d_modech.c  d_part.c  d_polyse.c  d_scan.c  d_sky.c  d_sprite.c  d_surf.c  d_vars.c  d_zpoint.c  draw.c  in_gamepad.c  in_gamepad.h  in_keyboard.c  in_keyboard.h  in_main.c  in_mouse.c  in_mouse.h  keys.c  menu.c  model.c  r_aclip.c  r_alias.c  (+44 more)
src/common/: CMakeLists.txt  bothdefs.h  bspfile.h  cdaudio.h  client.h  cmd.c  cmd.h  common.c  common.h  console.h  crc.c  crc.h  cvar.c  cvar.h  d_iface.h  draw.h  input.h  keys.h  mathlib.c  mathlib.h  md4.c  menu.h  model.h  modelgen.h  net.h  net_chan.c  net_udp.c  pmove.c  pmove.h  pmovetst.c  protocol.h  quakedef.h  render.h  sbar.h  screen.h  sound.h  spritegn.h  sys.h  vid.h  view.h  (+4 more)
src/server/: CMakeLists.txt  model.c  pr_cmds.c  pr_comp.h  pr_edict.c  pr_exec.c  progdefs.h  progs.h  qwsvdef.h  server.h  sv_ccmds.c  sv_ents.c  sv_init.c  sv_main.c  sv_move.c  sv_nchan.c  sv_phys.c  sv_send.c  sv_user.c  sv_world.c  sv_world.h  sys.c
